* Bugfix: Avoid long names to overflow

--- a/asset/css/ext.scss
+++ b/asset/css/ext.scss
@@ -218,6 +218,8 @@ menu, nav, section {
 		p {
 			line-height: 15px;
 			padding:0 0 0 0;
+			width: 118px;
+			max-width: 118px;
 		}
 	}
 
